--- a/alpha/index.html
+++ b/alpha/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Discord Account Settings Button</h1>
-        <a href="https://support.discord.com/hc/en-us" target="_blank">Discord Help Webpage</a>
+        <div class="linkBox"><a href="https://support.discord.com/hc/en-us" target="_blank" class="linkButton">Discord Help Webpage</a></div>
     </header>
     <main>
     <h2 class="sectionTitle">Original microinteraction</h2>
@@ -19,15 +19,25 @@
             <div class="textBlock">
                 <h3>Triggers</h3>
                 <ul>
-                    <li class="textItem">The microinteraction is triggered when you hover the mouse over the white box containing the Account Settings label. </li>
+                    <li class="textItem">Triggered when you hover / hover off the Account Settings option block.</li>
                 </ul>
             </div>
-            <div class="textBlock, textBlockMid">
-                <h3>Rules / Feedback</h3>
+            <div class="textBlock">
+                <h3>Rules</h3>
                 <ul>
-                    <li class="textItem">The pointer icon instantly turns to the standard hand icon for clickable items.</li>
-                    <li class="textItem">The box containing the Account Settings label instantly moves up about 5-10 pixels. </li>
-                    <li class="textItem">The feedback is the same as the rules, as nothing happens in the background.</li>
+                    <li class="textItem">Pointer turns to standard hand icon.</li>
+                    <li class="textItem">Account Settings block moves up about 5-10 pixels. </li>
+                    <li class="textItem">On hover off, hand icon turns back to pointer. </li>
+                    <li class="textItem">Account Settings block moves down about 5-10 pixels. </li>
+                </ul>
+            </div>
+            <div class="textBlock">
+                <h3>Feedback</h3>
+                <ul>
+                    <li class="textItem">Pointer turns to standard hand icon.</li>
+                    <li class="textItem">Account Settings block moves up about 5-10 pixels. </li>
+                    <li class="textItem">On hover off, hand icon turns back to pointer. </li>
+                    <li class="textItem">Account Settings block moves down about 5-10 pixels. </li>
                 </ul>
             </div>
             <div class="textBlock">
@@ -42,27 +52,39 @@
             <div class="textBlock">
                 <h3>Triggers</h3>
                 <ul>
-                    <li class="textItem">The microinteraction is triggered when you hover the mouse over the white box containing the Account Settings label. </li>
+                    <li class="textItem">Triggered when you hover / hover off the Account Settings option block.</li>
                 </ul>
             </div>
-            <div class="textBlock, textBlockMid">
-                <h3>Rules/Feedback</h3>
+            <div class="textBlock">
+                <h3>Rules</h3>
                 <ul>
-                    <li class="textItem">The pointer icon instantly turns to the standard hand icon for clickable items.</li>
-                    <li class="textItem">A border that matches the company's purple color appears around the clickable box, growing from 1 pixel to 5 pixels in width
-                        within the .4 second duration time of the microinteraction.
+                    <li class="textItem">Pointer turns to standard hand icon.</li>
+                    <li class="textItem">Blue-purple border fades in around the block, growing from 1 - 5 pixel width in .4 seconds. 
                     </li>
-                    <li class="textItem">The little gray sparkle images shaped like plus signs, situated to the top right of the cogs, will not be static. They will
-                        start off completely transparent, and four small 2 pixel width lines will appear and expand out from a center point, quickly disappearing by
-                        shortening in length until it has a length of 0.
+                    <li class="textItem">Gray sparkles will twinkle: The four lines of each will elongate from 0 length and shorten back to 0 length. Rightmost sparkle
+                        will activate .2 seconds after the other. 
                     </li>
-                    <li class="textItem">For the rule above, this motion will apply to both sparkles. The first sparkle that is higher up will start animating immediately 
-                        on hover, and the second sparkle that is lower down will start animating .2 seconds after the first. 
+                    <li class="textItem">Two cogs rotate, yellow spins 180 degrees clockwise, purple cog spins 180 degrees counter-clockwise. 
+                        The rotation speed starts fasts and slows down as the animation plays through the full .4 second length.
                     </li>
-                    <li class="textItem">The two cogs will spin immediately on hover, the yellow cog rotating 180 degrees clockwise, and the purple cog will rotate 180
-                        degrees counter-clockwise. The rotation speed will start at maximum speed and slow down as the animation plays through the full .4 second length.
+                    <li class="textItem">On hover off, cogs rotate another 180 degrees in the same direction as on hover, and border fades back to 0 width. No sparkles.
                     </li>
-                    <li class="textItem">The feedback is the same as the rules, as nothing happens in the background.</li>
+                </ul>
+            </div>
+            <div class="textBlock">
+                <h3>Feedback</h3>
+                <ul>
+                    <li class="textItem">Pointer turns to standard hand icon.</li>
+                    <li class="textItem">Blue-purple border fades in around the block, growing from 1 - 5 pixel width in .4 seconds. 
+                    </li>
+                    <li class="textItem">Gray sparkles will twinkle: The four lines of each will elongate from 0 length and shorten back to 0 length. Rightmost sparkle
+                        will activate .2 seconds after the other. 
+                    </li>
+                    <li class="textItem">Two cogs rotate, yellow spins 180 degrees clockwise, purple cog spins 180 degrees counter-clockwise. 
+                        The rotation speed starts fasts and slows down as the animation plays through the full .4 second length.
+                    </li>
+                    <li class="textItem">On hover off, cogs rotate another 180 degrees in the same direction as on hover, and border fades back to 0 width. No sparkles.
+                    </li>
                 </ul>
             </div>
             <div class="textBlock">
@@ -72,9 +94,13 @@
                 </ul>
             </div>
         </div>
-        <h2 class="sectionTitle">Demo Image</h2>
+        <h2 class="sectionTitle">Demo Images</h2>
         <div class="imageBox">
-            <a href="images/cogs.jpg" target="_blank"><img class="image" src="images/cogs.jpg" alt="Microinteraction display" /></a>
+            <img class="image" src="images/frame1.jpg" alt="Microinteraction display frame 1" />
+            <img class="image" src="images/frame2.jpg" alt="Microinteraction display frame 2" />
+            <img class="image" src="images/frame3.jpg" alt="Microinteraction display frame 3" />
+            <img class="image" src="images/frame4.jpg" alt="Microinteraction display frame 4" />
+            <img class="image" src="images/frame5.jpg" alt="Microinteraction display frame 5" />
         </div>
     </main>
 </body>
