--- a/beta/index.html
+++ b/beta/index.html
@@ -42,7 +42,7 @@
                 <ul>
                     <li class="textItem">Cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.</li>
                     <li class="textItem">After border is gone, large mode with account settings page information rises from the bottom of the screen, ease out.</li>
-                    <li class="textItem">Mode can be closed by clicking the X button in upper right corner.</li>
+                    <li class="textItem">Settings page box can be closed by clicking the X button in upper right corner.</li>
                 </ul>
             </div>
             <div class="textBlock">
@@ -60,7 +60,7 @@
                 </ul>
                 <h4>Click</h4>
                 <ul>
-                    <li class="textItem">cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.</li>
+                    <li class="textItem">Cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.</li>
                     <li class="textItem">After border is gone, large white box with account settings page information rises from the bottom of the screen, ease out.</li>
                     <li class="textItem">Settings page box can be closed by clicking the X button in upper right corner.</li>
                 </ul>
