--- a/beta/index.html
+++ b/beta/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize">
     <link rel="stylesheet" href="css/stylesheet.css" media="screen">
-    <title>beta</title>
+    <title>Beta Description</title>
 </head>
 <body>
     <header>
@@ -22,6 +22,8 @@
                     <li class="textItem">Hover on Account Settings block.</li>
                     <li class="textItem">Hover off Account Settings block.</li>
                     <li class="textItem">Click on Account Settings Block</li>
+                    <li class="textItem">Hover on X button</li>
+                    <li class="textItem">Hover off X button</li>
                     <li class="textItem">Click on X button</li>
                 </ul>
             </div>
@@ -41,8 +43,14 @@
                 <h4>Click</h4>
                 <ul>
                     <li class="textItem">Cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.</li>
-                    <li class="textItem">After border is gone, large mode with account settings page information rises from the bottom of the screen, ease out.</li>
+                    <li class="textItem">After border is gone, large mode with account settings page information rises from the bottom of the screen, ease out over .7 seconds.</li>
                     <li class="textItem">Settings page box can be closed by clicking the X button in upper right corner.</li>
+                </ul>
+                <h4>X button</h4>
+                <ul>
+                    <li class="textItem">Hovering over the X makes purple 5 pixel border fade in from 0 to 1 opacity over .3 seconds.</li>
+                    <li class="textItem">On click, purple border fades back to 0 opacity over .3 seconds.</li>
+                    <li class="textItem">After X border disappears, Settings page box lowers down off the screen in .6 seconds, ease in.</li>
                 </ul>
             </div>
             <div class="textBlock">
@@ -61,8 +69,14 @@
                 <h4>Click</h4>
                 <ul>
                     <li class="textItem">Cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.</li>
-                    <li class="textItem">After border is gone, large white box with account settings page information rises from the bottom of the screen, ease out.</li>
+                    <li class="textItem">After border is gone, large mode with account settings page information rises from the bottom of the screen, ease out over .7 seconds.</li>
                     <li class="textItem">Settings page box can be closed by clicking the X button in upper right corner.</li>
+                </ul>
+                <h4>X button</h4>
+                <ul>
+                    <li class="textItem">Hovering over the X makes purple 5 pixel border fade in from 0 to 1 opacity over .3 seconds.</li>
+                    <li class="textItem">On click, purple border fades back to 0 opacity over .3 seconds.</li>
+                    <li class="textItem">After X border disappears, Settings page box lowers down off the screen in .6 seconds, ease in.</li>
                 </ul>
             </div>
             <div class="textBlock">
@@ -77,11 +91,11 @@
         <div class="imageBox">
             <img class="image" src="images/beta1.png" alt="Microinteraction hover display frame 1" />
             <img class="image" src="images/beta2.png" alt="Microinteraction hover display frame 2" />
-            <img class="image" src="images/beta3.png" alt="Microinteraction hover isplay frame 3" />
+            <img class="image" src="images/beta3.png" alt="Microinteraction hover display frame 3" />
         </div>
         <h4 class="sectionTitle">Click</h4>
         <div class="imageBox">
-            <img class="image" src="images/beta3.png" alt="Microinteraction click display frame 1" />
+            <img class="image" src="images/beta4.png" alt="Microinteraction hover display frame 4" />
             <img class="image" src="images/beta2.png" alt="Microinteraction click display frame 2" />
             <img class="image" src="images/beta1.png" alt="Microinteraction click display frame 3" />
         </div>
@@ -89,6 +103,11 @@
             <img class="imageWide" src="images/betaclick1.jpg" alt="Microinteraction click display frame 4" />
             <img class="imageWide" src="images/betaclick2.jpg" alt="Microinteraction click display frame 5" />
             <img class="imageWide" src="images/betaclick3.jpg" alt="Microinteraction click display frame 6" />
+        <h4 class="sectionTitle">X button</h4>
+            <img class="imageWide" src="images/xhover.jpg" alt="Microinteraction x display frame 1" />
+            <img class="imageWide" src="images/xclick.jpg" alt="Microinteraction x display frame 2" />
+            <img class="imageWide" src="images/xexit.jpg" alt="Microinteraction x display frame 3" />
+            <img class="imageWide" src="images/xfinal.png" alt="Microinteraction x display frame 4" />
         </div>
     </main>
 </body>
