--- a/final/index.html
+++ b/final/index.html
@@ -14,127 +14,14 @@
         <div class="linkBox"><a href="https://support.discord.com/hc/en-us" target="_blank" class="linkButton">Discord Help Webpage</a></div>
     </header>
     <main>
-    <h2 class="sectionTitle">Alpha</h2> 
-    <div class="interactionComponents">
-        <div class="textBlock">
-            <h3>Triggers</h3>
-            <ul>
-                <li class="textItem">Triggered when you hover / hover off the Account Settings option block.</li>
-            </ul>
-        </div>
-        <div class="textBlock">
-            <h3>Rules</h3>
-            <ul>
-                <li class="textItem">Pointer turns to standard hand icon.</li>
-                <li class="textItem">Blue-purple border fades in around the block, growing from 1 - 5 pixel width in .4 seconds. 
-                </li>
-                <li class="textItem">Two cogs rotate, yellow spins 180 degrees clockwise, purple cog spins 180 degrees counter-clockwise. 
-                    The rotation speed starts fasts and slows down as the animation plays through the full .4 second length.
-                </li>
-                <li class="textItem">On hover off, cogs rotate another 180 degrees in the same direction as on hover, and border fades back to 0 width.
-                </li>
-            </ul>
-        </div>
-        <div class="textBlock">
-            <h3>Feedback</h3>
-            <ul>
-                <li class="textItem">Pointer turns to standard hand icon.</li>
-                <li class="textItem">Blue-purple border fades in around the block, growing from 1 - 5 pixel width in .4 seconds. 
-                </li>
-                <li class="textItem">Two cogs rotate, yellow spins 180 degrees clockwise, purple cog spins 180 degrees counter-clockwise. 
-                    The rotation speed starts fasts and slows down as the animation plays through the full .4 second length.
-                </li>
-                <li class="textItem">On hover off, cogs rotate another 180 degrees in the same direction as on hover, and border fades back to 0 width.
-                </li>
-            </ul>
-        </div>
-        <div class="textBlock">
-            <h3>Loops/Modes</h3>
-            <ul>
-                <li class="textItem">There are no loops or modes for this microinteraction.</li>
-            </ul>
-        </div>
-    </div>                <!--ALPHA-->
-    <h2 class="sectionTitle">Beta</h2>                 <!--BETA-->
-    <div class="interactionComponents">
-        <div class="textBlock">
-            <h3>Triggers</h3>
-            <ul>
-                <li class="textItem">Hover on Account Settings block</li>
-                <li class="textItem">Hover off Account Settings block</li>
-                <li class="textItem">Click on Account Settings Block</li>
-                <li class="textItem">Hover on X button</li>
-                <li class="textItem">Hover off X button</li>
-                <li class="textItem">Click on X button</li>
-            </ul>
-        </div>
-        <div class="textBlock">
-            <h3>Rules</h3>
-            <h4>Hover on/off</h4>
-            <ul>
-                <li class="textItem">Pointer turns to standard hand icon.</li>
-                <li class="textItem">Blue-purple border fades in around the block, growing from 1 - 5 pixel width in .4 seconds. 
-                </li>
-                <li class="textItem">Two cogs rotate, yellow spins 180 degrees clockwise, purple cog spins 180 degrees counter-clockwise. 
-                    The rotation speed starts fasts and slows down as the animation plays through the full .4 second length.
-                </li>
-                <li class="textItem">On hover off, cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.
-                </li>
-            </ul>
-            <h4>Click</h4>
-            <ul>
-                <li class="textItem">Cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.</li>
-                <li class="textItem">After border is gone, large mode with account settings page information rises from the bottom of the screen, ease out over .7 seconds.</li>
-                <li class="textItem">Settings page box can be closed by clicking the X button in upper right corner.</li>
-            </ul>
-            <h4>X button</h4>
-            <ul>
-                <li class="textItem">Hovering over the X makes purple 5 pixel border fade in from 0 to 1 opacity over .3 seconds.</li>
-                <li class="textItem">On click, purple border fades back to 0 opacity over .3 seconds.</li>
-                <li class="textItem">After X border disappears, Settings page box lowers down off the screen in .6 seconds, ease in.</li>
-            </ul>
-        </div>
-        <div class="textBlock">
-            <h3>Feedback</h3>
-            <h4>Hover on/off</h4>
-            <ul>
-                <li class="textItem">Pointer turns to standard hand icon.</li>
-                <li class="textItem">Blue-purple border fades in around the block, growing from 1 - 5 pixel width in .4 seconds. 
-                </li>
-                <li class="textItem">Two cogs rotate, yellow spins 180 degrees clockwise, purple cog spins 180 degrees counter-clockwise. 
-                    The rotation speed starts fasts and slows down as the animation plays through the full .4 second length.
-                </li>
-                <li class="textItem">On hover off, cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.
-                </li>
-            </ul>
-            <h4>Click</h4>
-            <ul>
-                <li class="textItem">Cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.</li>
-                <li class="textItem">After border is gone, large mode with account settings page information rises from the bottom of the screen, ease out over .7 seconds.</li>
-                <li class="textItem">Settings page box can be closed by clicking the X button in upper right corner.</li>
-            </ul>
-            <h4>X button</h4>
-            <ul>
-                <li class="textItem">Hovering over the X makes purple 5 pixel border fade in from 0 to 1 opacity over .3 seconds.</li>
-                <li class="textItem">On click, purple border fades back to 0 opacity over .3 seconds.</li>
-                <li class="textItem">After X border disappears, Settings page box lowers down off the screen in .6 seconds, ease in.</li>
-            </ul>
-        </div>
-        <div class="textBlock">
-            <h3>Loops/Modes</h3>
-            <ul>
-                <li class="textItem">The settings page information box is a mode that appears when the Account Settings button is clicked.</li>
-            </ul>
-        </div>
-    </div>
     <h2 class="sectionTitle">Final</h2>                 <!--FINAL-->
         <div class="interactionComponents">
             <div class="textBlock">
                 <h3>Triggers</h3>
                 <ul>
                     <li class="textItem">Hover on/off Account Settings block</li>
-                    <li class="textItem">Click on Account Settings Block</li>
-                    <li class="textItem">Hold-click on Account Settings Block</li>
+                    <li class="textItem">Click down on Account Settings Block</li>
+                    <li class="textItem">Click up on Account Settings Block</li>
                     <li class="textItem">Hover on/off links contained in modal</li>
                     <li class="textItem">Hover on/off X button</li>
                     <li class="textItem">Click on X button</li>
@@ -153,14 +40,15 @@
                     <li class="textItem">On hover off, cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.
                     </li>
                 </ul>
-                <h4>Account Settings Hold-click</h4>
+                <h4>Account Settings Mouse Down</h4>
                 <ul>
                     <li class="textItem">Cogs spin at 360 degrees per second, the yellow spinning clockwise and purple spinning counter-clockwise.</li>
                     <li class="textItem">Account Settings button shrinks by 5% in height and width, over .15 seconds.</li>
                 </ul>
-                <h4>Account Settings Click</h4>
+                <h4>Account Settings Mouse Up</h4>
                 <ul>
                     <li class="textItem">Account Settings button returns to original size over .15 seconds, and border fades back to 0 width.</li>
+                    <li class="textItem">Pointer turns back to default icon.</li>
                     <li class="textItem">Cogs continue to spin as on hold.</li>
                     <li class="textItem">Cogs and text move downward, easing into animation, fading to 0 opacity over .8 seconds, overflow is hidden.</li>
                     <li class="textItem">Settings modal rises from bottom of screen over .4 seconds and covers entire view.</li>
@@ -168,17 +56,19 @@
                 <h4>Modal Link Hover</h4>
                 <ul>
                     <li class="textItem">Link turns from gray to purple and increases by .1rem over .2 seconds.</li>
+                    <li class="textItem">The "See all articles" links do not change color, only grow in size by .1rem over .2 seconds.</li>
                     <li class="textItem">On hover off, hover animation reverses, text goes back to gray and 1.3 rem size over .2 seconds.</li>
                 </ul>
                 <h4>X button</h4>
                 <ul>
                     <li class="textItem">Hovering over the X makes purple 5 pixel border fade in from 0 to 1 opacity over .3 seconds.</li>
+                    <li class="textItem">Pointer turns to standard hand icon.</li>
                     <li class="textItem">On click, X button fades to 0 opacity over .3 seconds.</li>
                     <li class="textItem">After X border disappears, Settings page box lowers down off the screen in .4 seconds, ease in.</li>
                 </ul>
             </div>
             <div class="textBlock">
-                <h3>Rules</h3>
+                <h3>Feedback</h3>
                 <h4>Account Settings Hover</h4>
                 <ul>
                     <li class="textItem">Pointer turns to standard hand icon.</li>
@@ -190,14 +80,15 @@
                     <li class="textItem">On hover off, cogs rotate another 180 degrees in the opposite direction as on hover, and border fades back to 0 width.
                     </li>
                 </ul>
-                <h4>Account Settings Hold-click</h4>
+                <h4>Account Settings Mouse Down</h4>
                 <ul>
                     <li class="textItem">Cogs spin at 360 degrees per second, the yellow spinning clockwise and purple spinning counter-clockwise.</li>
                     <li class="textItem">Account Settings button shrinks by 5% in height and width, over .15 seconds.</li>
                 </ul>
-                <h4>Account Settings Click</h4>
+                <h4>Account Settings Mouse Up</h4>
                 <ul>
                     <li class="textItem">Account Settings button returns to original size over .15 seconds, and border fades back to 0 width.</li>
+                    <li class="textItem">Pointer turns back to default icon.</li>
                     <li class="textItem">Cogs continue to spin as on hold.</li>
                     <li class="textItem">Cogs and text move downward, easing into animation, fading to 0 opacity over .8 seconds, overflow is hidden.</li>
                     <li class="textItem">Settings modal rises from bottom of screen over .4 seconds and covers entire view.</li>
@@ -205,11 +96,13 @@
                 <h4>Modal Link Hover</h4>
                 <ul>
                     <li class="textItem">Link turns from gray to purple and increases by .1rem over .2 seconds.</li>
+                    <li class="textItem">The "See all articles" links do not change color, only grow in size by .1rem over .2 seconds.</li>
                     <li class="textItem">On hover off, hover animation reverses, text goes back to gray and 1.3 rem size over .2 seconds.</li>
                 </ul>
                 <h4>X button</h4>
                 <ul>
                     <li class="textItem">Hovering over the X makes purple 5 pixel border fade in from 0 to 1 opacity over .3 seconds.</li>
+                    <li class="textItem">Pointer turns to standard hand icon.</li>
                     <li class="textItem">On click, X button fades to 0 opacity over .3 seconds.</li>
                     <li class="textItem">After X border disappears, Settings page box lowers down off the screen in .4 seconds, ease in.</li>
                 </ul>
@@ -223,12 +116,8 @@
             </div>
         </div>
         <h2 class="sectionTitle">Demo Gifs</h2>
-        <div class="gifBox">
-        <img class="gif" src="images/gif1.GIF" alt="Demo gif 1">
-        </div>
-        <div class="gifBox">
-        <img class="gif" src="images/gif2.GIF" alt="Demo gif 2">
-         </div>
+        <img class="image" src="images/gif1.GIF" alt="Demo gif 1">
+        <img class="image" src="images/gif2.GIF" alt="Demo gif 2">
     </main>
 </body>
 </html>
